style: Add borders with CSS

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -29,13 +29,13 @@
             <div class="action">
               <label class="form">Flight
                 <input type="text" id="flight-number">
+              </label>
               <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
-            </label>
             </div>
           </div>
           <div class='user-menu'>
             <h3>Airline</h3>
-            <div class="action">
+            <div class="action border-bottom">
               <label class="form">Flight Reference
                 <input type="text" id="regFlightRef" required>
               </label>
@@ -50,7 +50,7 @@
               </label>
               <btn class="btn btn-primary" id="register-flight">Register Flight</btn>
             </div>
-            <div class="action">
+            <div class="action border-bottom">
               <label class="form">Airline (address)
                 <input type="text" id="regAirlineAddress">
               </label>
@@ -65,7 +65,7 @@
           </div>
           <div class='user-menu'>
             <h3>Passenger</h3>
-            <div class="action">
+            <div class="action border-bottom">
               <label class="form">Flight
                 <input list="flights" id="buyFlight">
                 <datalist id="flights">
