feat: Move flights data from App contract to Data contract
This to support data persistence from app logic.

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -77,8 +77,8 @@
               <btn class="btn btn-primary" id="buy">Book Flight</btn>
             </div>
             <div class="action">
-              <p>In case of delayed flight, get 1.5 X paid insurance fee</p>
-              <btn class="btn btn-primary" id="pay">Withdraw</btn>
+              <p>In case of flight delay, your subscribed insurance insures you to get back 1.5 X the insurance fee paid at booking. </p>
+              <btn class="btn btn-primary" id="pay">Claim</btn>
             </div>
           </div>
         </div>
