--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>FlightSurety</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" href="https://s2.qwant.com/thumbr/0x0/f/d/061fb9b82bf649642d6ca376e89ee577693b0d78f63aefc5789e282d858481/sq_420-128.png?u=https%3A%2F%2Fcdn1.iconfinder.com%2Fdata%2Ficons%2Finsurance-16%2F64%2Fsq_420-128.png&q=0&b=1&p=0&a=1">
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">FlightSurety</a>
+        <a id='title' class="navbar-brand" href="#">Flight-Surety Ethereum DAPP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
         <div class='flexbox'>
           <div class='user-menu'>
             <h3>Oracles</h3>
-            <div class="action">
+            <div class="action last">
               <label class="form">Flight
                 <input type="text" id="flight-number">
               </label>
@@ -62,7 +62,7 @@
               </label>
                 <btn class="btn btn-primary" id="register-airline">Register Airline</btn>
             </div>
-            <div class="action">
+            <div class="action last">
               <label class="form">Amount
                 <input type="number" id="fundAmount" min="10">
               </label>
@@ -82,7 +82,7 @@
               </label>
               <btn class="btn btn-primary" id="buy">Book Flight</btn>
             </div>
-            <div class="action">
+            <div class="action last">
               <p>In case of flight delay, your subscribed insurance insures you to get back 1.5 X the insurance fee paid at booking. </p>
               <btn class="btn btn-primary" id="pay">Claim</btn>
             </div>
