fix: Display Fetch Flight Status request

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -28,7 +28,7 @@
             <h3>Oracles</h3>
             <div class="action last">
               <label class="form">Flight (ref - to - landing)
-                <input list="oracle-requests">
+                <input list="oracle-requests" id="oracle-request">
                 <datalist id="oracle-requests">
                 </datalist>
               </label>
