fix: Set price arg of registerFlight function to wei (front-end)

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -84,9 +84,13 @@
               </label>
               <btn class="btn btn-primary" id="buy">Book Flight</btn>
             </div>
-            <div class="action last">
-              <p>In case of flight delay, your subscribed insurance insures you to get back 1.5 X the insurance fee paid at booking. </p>
-              <btn class="btn btn-primary" id="pay">Claim</btn>
+            <div class="user-menu">
+              <h3>Passengers & airlines</h3>
+              <div class="action last">
+                <p>In case of flight delay, passengers get back 1.5 X the insurance fee paid at booking.<p>
+                <p>Airlines can withdraw ticket prices paid to them</p>
+                <btn class="btn btn-primary" id="pay">Claim</btn>
+              </div>
             </div>
           </div>
         </div>
