feat: Set step of 0.1 ETH for insurance booking

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -80,7 +80,7 @@
                 </datalist>
               </label>
               <label class="form">Insurance amount
-                <input type="number" id="buyAmount" min='0'>
+                <input type="number" id="buyAmount" min='0' max='1' step='0.1'>
               </label>
               <btn class="btn btn-primary" id="buy">Book Flight</btn>
             </div>
