fix: Format properly new flight appended to array stored on server side
+ Minor HTML change

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -70,7 +70,7 @@
           <div class='user-menu'>
             <h3>Passenger</h3>
             <div class="action border-bottom">
-              <label class="form">Flight (price - from - to - take off - landing)
+              <label class="form">Flight (N° - price - from - to - take off - landing)
                 <input list="flights" id="buyFlight">
                 <datalist id="flights">
                 </datalist>
